header bg responsive fixed drop down element aligned

--- a/src/sass/layouts/_header.scss
+++ b/src/sass/layouts/_header.scss
@@ -119,6 +119,9 @@
           &:hover {
             background: $N2;
           }
+          display: inline-block;
+          line-height: normal;
+          width: 100%;
           padding: 0.5em;
           margin: 0.5em;
           color: $B1;
